Visual and Name Change
Change project name to Grub Bot and update styling of chat bot

--- a/scss/main.scss
+++ b/scss/main.scss
@@ -106,7 +106,7 @@ hr {
   grid-area: chatbot;
   display: grid;
   grid-template-columns: 20px auto 20px;
-  grid-template-rows: 18% 2% 60% 2% 18%;
+  grid-template-rows: 10% 1% 60% 1% 28%;
   grid-template-areas:
     '. botname .'
     'border1 border1 border1'
@@ -124,6 +124,7 @@ hr {
 .chat-header {
   grid-area: botname;
   justify-self: center;
+  align-self: center;
 }
 
 .chat-name {
@@ -134,9 +135,11 @@ hr {
 .chat-separator {
   &--top {
     grid-area: border1;
+    align-self: center;
   }
   &--bottom {
     grid-area: border2;
+    align-self: center;
   }
 }
 
@@ -150,7 +153,7 @@ hr {
   flex-direction: row;
   justify-content: center;
   padding: 10px 14px;
-  margin: 10px 20px;
+  margin: 15px 20px;
   border-radius: 10px;
   position: relative;
 
@@ -168,11 +171,31 @@ hr {
   &--left {
     background: $gray;
     margin-right: 15rem;
+
+    &:after {
+      content: '';
+      border-left: 10px solid $gray;
+      width: 0;
+      height: 0;
+      left: -25px;
+      top: 15px;
+      transform: rotate(-90deg);
+    }
   }
 
   &--right {
     background: $blue;
     margin-left: 15rem;
+
+    &:after {
+      content: '';
+      border-right: 10px solid $blue;
+      width: 0;
+      height: 0;
+      left: 223px;
+      top: 15px;
+      transform: rotate(90deg);
+    }
   }
 
   & p {
@@ -185,7 +208,7 @@ hr {
   justify-self: center;
   display: flex;
   align-self: center;
-  height: 20px;
+  height: 30px;
 }
 
 .chat-reply {
