--- a/scss/main.scss
+++ b/scss/main.scss
@@ -9,6 +9,7 @@ $blue: rgb(109, 187, 255);
 
 body {
   background: $primary-color;
+  font-family: 'Poppins', sans-serif;
 }
 
 hr {
@@ -156,6 +157,7 @@ hr {
   margin: 15px 20px;
   border-radius: 10px;
   position: relative;
+  font-weight: 400;
 
   &:after {
     content: '';
@@ -208,15 +210,27 @@ hr {
   display: flex;
   flex-flow: row wrap;
   align-content: space-around;
+  justify-content: space-around;
 }
 
 .chat-replies {
   display: flex;
   flex-direction: row;
-  justify-content: space-around;
-  align-items: center;
+  justify-content: space-evenly;
+  align-content: center;
+  width: 100%;
+
+  &:nth-child(5) {
+    width: 75%;
+  }
 }
 
 .chat-reply {
-  padding: 0 10px;
+  padding: 0;
+  border: none;
+  outline: none;
+  cursor: pointer;
+  font-family: inherit;
+  font-weight: 500;
+  width: 100%;
 }
