--- a/scss/main.scss
+++ b/scss/main.scss
@@ -146,7 +146,7 @@ hr {
 
 .container-chat-msg {
   grid-area: messages;
-  overflow: auto;
+  overflow-y: scroll;
 }
 
 .chat-msg {
@@ -194,7 +194,7 @@ hr {
       border-right: 10px solid $blue;
       width: 0;
       height: 0;
-      left: 223px;
+      left: 208px;
       top: 15px;
       transform: rotate(90deg);
     }
