--- a/scss/main.scss
+++ b/scss/main.scss
@@ -233,4 +233,45 @@ hr {
   font-family: inherit;
   font-weight: 500;
   width: 100%;
+  background: none;
+}
+
+.hide-chat {
+  display: none;
+  transition: 0.5s all ease;
+}
+
+// Loader
+
+.loader {
+  grid-area: chatbot;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+
+  & > span {
+    display: inline-block;
+    background-color: rgb(132, 59, 50);
+    width: 16px;
+    height: 16px;
+    border-radius: 50%;
+    margin: 0 8px;
+    transform: translate3d(0);
+    animation: bounce 0.7s infinite alternate-reverse;
+  }
+
+  & > span:nth-child(2) {
+    animation-delay: 0.2s;
+  }
+
+  & > span:nth-child(3) {
+    animation-delay: 0.4s;
+  }
+}
+
+@keyframes bounce {
+  to {
+    transform: translate3d(0, -30px, 0);
+    background-color: rgb(255, 185, 151);
+  }
 }
