--- a/scss/main.scss
+++ b/scss/main.scss
@@ -290,7 +290,7 @@ hr {
     'name .'
     'img info';
   background-color: $white;
-  box-shadow: 0px 0px 20px $black;
+  box-shadow: 0px 0px 20px rgba(53, 53, 53, 0.918);
   border-radius: 10px;
   height: 50%;
   width: 80%;
@@ -305,6 +305,7 @@ hr {
   &-img {
     height: 90%;
     width: 90%;
+    border-radius: 10px;
 
     &-container {
       grid-area: img;
@@ -323,11 +324,18 @@ hr {
   }
 
   &-categories {
-    font-size: 14px;
+    font-size: 12px;
+    padding-left: 7px;
 
     &-container {
       display: flex;
       justify-content: center;
+      align-items: center;
+    }
+
+    &-header {
+      font-size: 12px;
+      font-weight: 700;
     }
   }
 
