--- a/scss/main.scss
+++ b/scss/main.scss
@@ -52,42 +52,43 @@ hr {
   justify-content: center;
 }
 
-.search-section {
-  grid-area: searchbar;
-  display: flex;
-  flex-direction: row;
-  justify-content: center;
-  align-items: center;
-}
+// **** DELETE LATER ****
+// .search-section {
+//   grid-area: searchbar;
+//   display: flex;
+//   flex-direction: row;
+//   justify-content: center;
+//   align-items: center;
+// }
 
-.search-bar {
-  background: $white;
-  width: 80%;
-  height: 50%;
-  display: flex;
-  flex-direction: column;
-  align-self: center;
-  border-radius: 25px;
+// .search-bar {
+//   background: $white;
+//   width: 80%;
+//   height: 50%;
+//   display: flex;
+//   flex-direction: column;
+//   align-self: center;
+//   border-radius: 25px;
 
-  .search-text {
-    border: none;
-    border-radius: 25px;
-    width: 100%;
-    height: 100px;
-    font-size: 2rem;
-    padding: 15px;
+//   .search-text {
+//     border: none;
+//     border-radius: 25px;
+//     width: 100%;
+//     height: 100px;
+//     font-size: 2rem;
+//     padding: 15px;
 
-    &::placeholder {
-      font-size: 2rem;
-      color: rgb(214, 214, 214);
-    }
+//     &::placeholder {
+//       font-size: 2rem;
+//       color: rgb(214, 214, 214);
+//     }
 
-    &:focus {
-      outline: none;
-      box-shadow: 0px 0px 15px $secondary-color;
-    }
-  }
-}
+//     &:focus {
+//       outline: none;
+//       box-shadow: 0px 0px 15px $secondary-color;
+//     }
+//   }
+// }
 
 .about-popup {
   grid-area: about;
@@ -362,24 +363,10 @@ hr {
     }
   }
 
-  &-rating {
-    font-size: 12px;
-    padding-left: 7px;
-
-    &:nth-child(3) {
-      padding-left: 3px;
-    }
-
-    &-container {
-      display: flex;
-      justify-content: center;
-      align-items: center;
-    }
-
-    &-header {
-      font-size: 12px;
-      font-weight: 700;
-    }
+  &-rating-container {
+    display: flex;
+    justify-content: center;
+    align-items: center;
   }
 
   &-distance {
