Add error message when there are no results.
-Add error message stating that there are no results based on user preferences.
-Ask user to try again.

--- a/scss/main.scss
+++ b/scss/main.scss
@@ -433,3 +433,18 @@ hr {
     }
   }
 }
+
+// Error Message
+
+.error-noresult {
+  font-size: 1rem;
+  font-weight: 700;
+  text-align: center;
+
+  &-container {
+    grid-area: chatbot;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+}
