--- a/scss/main.scss
+++ b/scss/main.scss
@@ -29,10 +29,11 @@ hr {
 
 .home-view {
   display: grid;
-  grid-template-columns: 28rem 55rem 28rem;
+  grid-template-columns: 10% 80% 10%;
+  // grid-template-columns: 10rem 63rem 10rem;
   grid-template-rows: 9rem 43rem 3rem;
   grid-template-areas:
-    'logo searchbar about'
+    '. header-bar .'
     '. chatbot .'
     '. . .';
 }
@@ -40,7 +41,7 @@ hr {
 // Header
 
 .project-logo {
-  grid-area: logo;
+  grid-area: header-bar;
   display: flex;
   flex-direction: column;
   align-self: center;
@@ -91,7 +92,7 @@ hr {
 // }
 
 .about-popup {
-  grid-area: about;
+  grid-area: header-bar;
   display: flex;
   flex-direction: column;
   align-self: center;
@@ -118,9 +119,10 @@ hr {
     '. replies .';
 
   background: $white;
-  width: 60%;
+  width: 40%;
   height: 90%;
   justify-self: center;
+  align-self: center;
   border-radius: 25px;
 }
 
@@ -219,19 +221,50 @@ hr {
   display: flex;
   flex-direction: row;
   justify-content: space-evenly;
-  align-content: center;
+  align-items: center;
   width: 100%;
 }
 
 .chat-reply {
+  position: relative;
+  margin: 0 5px;
   padding: 0;
   border: none;
   outline: none;
   cursor: pointer;
   font-family: inherit;
   font-weight: 500;
-  width: 100%;
   background: none;
+  width: 25%;
+  z-index: 1;
+  transition: ease-in 250ms;
+
+  &::before {
+    content: '';
+    position: absolute;
+    display: block;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    background: $primary-color;
+    width: 100%;
+    height: 100%;
+    border-radius: 5px;
+    transform: scaleY(0);
+    transform-origin: 50% 100%;
+    transition-property: transform;
+    transition: ease-out 250ms;
+    z-index: -5;
+  }
+
+  &:hover {
+    color: $white;
+
+    &::before {
+      transform: scaleY(1);
+    }
+  }
 }
 
 .hide-chat {
@@ -294,7 +327,7 @@ hr {
   box-shadow: 0px 0px 20px rgba(53, 53, 53, 0.918);
   border-radius: 10px;
   height: 50%;
-  width: 80%;
+  width: 60%;
 
   &-name {
     font-size: 1.5em;
