Update hover color of 'About' button.

--- a/scss/main.scss
+++ b/scss/main.scss
@@ -1,7 +1,7 @@
 // Variables
 $primary-color: rgb(246, 126, 125);
 $secondary-color: rgb(255, 186, 151);
-$white: rgb(255, 255, 255);
+$white: #ffffff;
 $gray: rgb(237, 237, 237);
 $black: rgb(0, 0, 0);
 $blue: rgb(109, 187, 255);
