Update project name to link back to home page.

--- a/scss/main.scss
+++ b/scss/main.scss
@@ -44,6 +44,7 @@ hr {
   flex-direction: row;
   justify-content: center;
   align-self: center;
+  align-items: center;
 }
 
 .project-name {
@@ -51,7 +52,17 @@ hr {
   flex-direction: row;
   justify-content: center;
   padding-right: 5rem;
-  cursor: pointer;
+
+  &-link {
+    font-size: 32px;
+    font-weight: 700;
+    text-decoration: none;
+    color: $black;
+
+    &:hover {
+      cursor: pointer;
+    }
+  }
 }
 
 .about-popup {
