--- a/scss/main.scss
+++ b/scss/main.scss
@@ -141,7 +141,7 @@ hr {
     background: $secondary-color;
     color: $white;
     padding: 15px;
-    border-radius: 10px;
+    border-radius: 10px 10px 0 0;
   }
 
   &-body {
@@ -315,7 +315,7 @@ hr {
     bottom: 0;
     left: 0;
     right: 0;
-    background: $primary-color;
+    background: $secondary-color;
     width: 100%;
     height: 100%;
     border-radius: 5px;
@@ -400,6 +400,8 @@ hr {
       display: flex;
       justify-content: center;
       align-items: center;
+      background: $secondary-color;
+      border-radius: 10px 0 5px 0;
     }
   }
 
