Add disclaimer at bottom of chat bot.
-Add disclaimer stating that some combinations of preferences may show no result.
-Place disclaimer at bottom of chat bot.
-Add animation of fade away to disclaimer.

--- a/scss/main.scss
+++ b/scss/main.scss
@@ -333,6 +333,12 @@ hr {
   }
 }
 
+.disclaimer {
+  grid-area: chatbot;
+  justify-self: center;
+  align-self: flex-end;
+}
+
 .hide-chat {
   animation-name: hidechat;
   animation-duration: 0.3s;
